# wxShade

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
BuildInc/: Build.h
cmake/: 3rdparty.cmake  glad.cmake  glm.cmake  tinyxml2.cmake  wxWidgets.cmake
framework/: AVIGenerator.cpp  AVIGenerator.h  Config.h  GLShader.cpp  GLShader.h  GLShaderManager.cpp  GLShaderManager.h  GLShaderRenderer.cpp  GLShaderRenderer.h  ParamManager.cpp  ParamManager.h
framework/Tools/: Tools.hpp
icons/psd/: AutoIndent_icon.psd  Layout0_icon.psd  Layout1_icon.psd  Layout2_icon.psd  Layout3_icon.psd  Layout4_icon.psd  Layout5_icon.psd  Layout6_icon.psd  PerfCompiling_icon.psd
res/: MSVCInfo.aps
src/: Assets.h  Build.h  DebugView.cpp  DebugView.h  DebugViewToolBar.cpp  DebugViewToolBar.h  Dlg.fbp  DocShaderArt.cpp  DocShaderArt.h  DocVisualControlAbstract.h  DocumentAbstract.h  EditorView.cpp  EditorView.h  Globals.h  HelpDlg.cpp  HelpDlg.fbp  HelpDlg.h  ImportFromShaderToy.cpp  ImportFromShaderToy.h  MainFrame.cpp  MainFrame.fbp  MainFrame.h  OutputWin.cpp  OutputWin.h  SettingsDlg.cpp  SettingsDlg.h  ShaderArtDocument.cpp  ShaderArtDocument.h  ShaderView.cpp  ShaderView.h  ShaderViewToolBar.cpp  ShaderViewToolBar.h  UniformAbstract.cpp  UniformAbstract.h  UniformBVH.cpp  UniformBVH.h  UniformColor.cpp  UniformColor.h  UniformCubeMap.cpp  UniformCubeMap.h  (+28 more)
